@@ -27,7 +27,7 @@ meta :: fn (unit: Unit, min := 0, max := 1000) u64 #comptime {
 	tag.unit = unit;
 	tag.min  = min;
 	tag.max  = max;
-	return auto index + 1;
+	return auto (index + 1);
 }
 
 META :: meta_reserve(4);
@@ -42,7 +42,7 @@ main :: fn () s32 {
 	loop i := 0; i < info.members.len; i += 1 {
 		member :: &info.members[i];
 		if member.tag > 0 {
-			print("  %\n", META[auto member.tag-1]);
+			print("  %\n", META[auto (member.tag-1)]);
 		}
 	}
 
