@@ -259,10 +259,10 @@ window_begin :: fn (window: *Window) bool {
 
 	if window.is_minimized {
 		if is_flag(window.flags, MINIMIZE_TO_BOTTOM) {
-			rect.y += rect.h - auto style.bar_height+style.frame_size * 2;
-			rect = rect_resized(rect, rect.w, auto style.bar_height+style.frame_size * 2);
+			rect.y += rect.h - auto (style.bar_height+style.frame_size * 2);
+			rect = rect_resized(rect, rect.w, auto (style.bar_height+style.frame_size * 2));
 		} else {
-			rect = rect_resized(rect, rect.w, auto style.bar_height+style.frame_size * 2);
+			rect = rect_resized(rect, rect.w, auto (style.bar_height+style.frame_size * 2));
 		}
 	}
 
@@ -1577,7 +1577,7 @@ variants_impl :: fn (rect: Rect, value: Any, _style: *VariantsStyle = null, flag
 	}
 
 	if index_variant_impl(rect, text, &variant_index, style, flags, index, loc) {
-		if variant_index < 0 { variant_index = auto info.variants.len - 1; }
+		if variant_index < 0 { variant_index = auto (info.variants.len - 1); }
 		else if variant_index >= info.variants.len { variant_index = 0; }
 		reinterpret_write_any(value, info.variants[variant_index].value);
 		return true;
@@ -2328,7 +2328,7 @@ peek_position :: fn (str: string_view, position: s64) string_view {
 
 delete_range :: fn (str: *string, start: s64, end: s64) {
 	len :: end - start;
-	memmove(&(@str)[start], &(@str)[end], auto (@str).len - end);
+	memmove(&(@str)[start], &(@str)[end], auto ((@str).len - end));
 	str.len -= len;
 }
 
@@ -2378,7 +2378,7 @@ calculate_line_offsets :: fn (text: string_view, rect: Rect, font: Font) []TextB
 	}
 
 	if start_index < text.len {
-		array_push(&edit_lines_tmp, TextBoxLine.{ start_index = start_index, len = auto text.len - start_index });
+		array_push(&edit_lines_tmp, TextBoxLine.{ start_index = start_index, len = auto (text.len - start_index) });
 	}
 
 	if edit_lines_tmp.len == 0 {
