@@ -66,8 +66,8 @@ simple_write_2 :: fn () #test {
 	io.write_value(&s, &n);
 
 	test_eq(s.data.len, 96);
-	test_eq(s.position, auto sizeof(data) + sizeof(s32));
-	test_eq(s.end, auto sizeof(data) + sizeof(s32));
+	test_eq(s.position, auto (sizeof(data) + sizeof(s32)));
+	test_eq(s.end, auto (sizeof(data) + sizeof(s32)));
 
 }
 
