@@ -39,7 +39,7 @@ test_pop :: fn () #test {
 		sarray_push(&arr, i);
 	}
 
-	expected : s32 = auto arr.len - 1;
+	expected : s32 = auto (arr.len - 1);
 	value := 0;
 	loop sarray_pop(&arr, &value) {
 		test_true(expected >= 0);
