@@ -259,7 +259,7 @@ impl_insert_empty :: fn (tbl: *?T, key: tbl_typeof_key(T)) *tbl_typeof_value(T) 
 }
 
 initial_increment :: fn (tbl: *?T, hash: u32) s32 #inline {
-	return auto 1 + hash % (cast(u32) tbl.slots.len - 1);
+	return auto (1 + hash % (cast(u32) tbl.slots.len - 1));
 }
 
 insert :: fn (tbl: *?T, hash: u32, key: tbl_typeof_key(T)) *tbl_typeof_value(T) #inline {
