@@ -108,7 +108,7 @@ struct ast_ident {
 struct ast_ref {
 	struct ast *ident;
 	struct ast *next;
-	struct ast *used_in_decl; // optional
+	struct ast *used_in_decl; // Optional, used for cyclic dependency detection.
 };
 
 struct ast_ublock {
