@@ -4,7 +4,7 @@ typeinfo_s8 :: fn () #test {
 	test_eq(info.kind, TypeKind.INT);
 	test_eq(info.size_bytes, sizeof(s8));
 	test_eq(info.alignment, alignof(s8));
-	test_eq(info.bit_count, auto sizeof(s8) * 8);
+	test_eq(info.bit_count, auto (sizeof(s8) * 8));
 	test_true(info.is_signed);
 }
 
@@ -13,7 +13,7 @@ typeinfo_s16 :: fn () #test {
 	test_eq(info.kind, TypeKind.INT);
 	test_eq(info.size_bytes, sizeof(s16));
 	test_eq(info.alignment, alignof(s16));
-	test_eq(info.bit_count, auto sizeof(s16) * 8);
+	test_eq(info.bit_count, auto (sizeof(s16) * 8));
 	test_true(info.is_signed);
 }
 
@@ -22,7 +22,7 @@ typeinfo_s32 :: fn () #test {
 	test_eq(info.kind, TypeKind.INT);
 	test_eq(info.size_bytes, sizeof(s32));
 	test_eq(info.alignment, alignof(s32));
-	test_eq(info.bit_count, auto sizeof(s32) * 8);
+	test_eq(info.bit_count, auto (sizeof(s32) * 8));
 	test_true(info.is_signed);
 }
 
@@ -31,7 +31,7 @@ typeinfo_s64 :: fn () #test {
 	test_eq(info.kind, TypeKind.INT);
 	test_eq(info.size_bytes, sizeof(s64));
 	test_eq(info.alignment, alignof(s64));
-	test_eq(info.bit_count, auto sizeof(s64) * 8);
+	test_eq(info.bit_count, auto (sizeof(s64) * 8));
 	test_true(info.is_signed);
 }
 
@@ -40,7 +40,7 @@ typeinfo_u8 :: fn () #test {
 	test_eq(info.kind, TypeKind.INT);
 	test_eq(info.size_bytes, sizeof(u8));
 	test_eq(info.alignment, alignof(u8));
-	test_eq(info.bit_count, auto sizeof(u8) * 8);
+	test_eq(info.bit_count, auto (sizeof(u8) * 8));
 	test_false(info.is_signed);
 }
 
@@ -49,7 +49,7 @@ typeinfo_u16 :: fn () #test {
 	test_eq(info.kind, TypeKind.INT);
 	test_eq(info.size_bytes, sizeof(u16));
 	test_eq(info.alignment, alignof(u16));
-	test_eq(info.bit_count, auto sizeof(u16) * 8);
+	test_eq(info.bit_count, auto (sizeof(u16) * 8));
 	test_false(info.is_signed);
 }
 
@@ -58,7 +58,7 @@ typeinfo_u32 :: fn () #test {
 	test_eq(info.kind, TypeKind.INT);
 	test_eq(info.size_bytes, sizeof(u32));
 	test_eq(info.alignment, alignof(u32));
-	test_eq(info.bit_count, auto sizeof(u32) * 8);
+	test_eq(info.bit_count, auto (sizeof(u32) * 8));
 	test_false(info.is_signed);
 }
 
@@ -67,7 +67,7 @@ typeinfo_u64 :: fn () #test {
 	test_eq(info.kind, TypeKind.INT);
 	test_eq(info.size_bytes, sizeof(u64));
 	test_eq(info.alignment, alignof(u64));
-	test_eq(info.bit_count, auto sizeof(u64) * 8);
+	test_eq(info.bit_count, auto (sizeof(u64) * 8));
 	test_false(info.is_signed);
 }
 
@@ -76,7 +76,7 @@ typeinfo_f32 :: fn () #test {
 	test_eq(info.kind, TypeKind.REAL);
 	test_eq(info.size_bytes, sizeof(f32));
 	test_eq(info.alignment, sizeof(f32));
-	test_eq(info.bit_count, auto sizeof(f32) * 8);
+	test_eq(info.bit_count, auto (sizeof(f32) * 8));
 }
 
 typeinfo_f64 :: fn () #test {
@@ -84,7 +84,7 @@ typeinfo_f64 :: fn () #test {
 	test_eq(info.kind, TypeKind.REAL);
 	test_eq(info.size_bytes, sizeof(f64));
 	test_eq(info.alignment, sizeof(f64));
-	test_eq(info.bit_count, auto sizeof(f64) * 8);
+	test_eq(info.bit_count, auto (sizeof(f64) * 8));
 }
 
 typeinfo_fn1 :: fn () #test {
